--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,17 @@
-server.port=8081
+server:
+  port: 8081
+spring:
+  datasource:
+    url: jdbc:h2:mem:shorturldb
+    driverClassName: org.h2.Driver
+    username: sa
+---
+spring:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+  #console
+---
+spring:
+  h2:
+    console:
+      enabled: true
